<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:src="@mipmap/back_black" />

            <TextView
                android:id="@+id/tv_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/register_user_txt"
                android:textColor="@color/top_title_color"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/top_line_color"></View>

    <LinearLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:paddingLeft="4dp"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_sms_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_sms_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_input_sms_code"
                android:paddingLeft="4dp"
                android:maxLength="6"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_get_code"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@drawable/send_pre_bg"
                    android:text="@string/get_code_txt"
                    android:textColor="@color/send_pre_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_pw_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_new_password"
            android:paddingLeft="4dp"
            android:maxLength="16"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_again_pw_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_again_pw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:maxLength="16"
            android:inputType="textPassword"
            android:hint="@string/input_again_new_password"
            android:paddingLeft="4dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:background="@mipmap/login_btn_pre"
            android:paddingBottom="4dp"
            android:text="@string/register_txt"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
