<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:src="@mipmap/back_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_below="@+id/top_layout"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/logo_round" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/logo_layout"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_input_name"
            android:paddingLeft="4dp"
            android:inputType="phone"
            android:maxLines="11"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_pw_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/input_name_layout"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_user_pw"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_input_password"
                android:paddingLeft="4dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forget_pw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="忘记密码"
                    android:textColor="@color/forget_password_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_get_code"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@drawable/send_pre_bg"
                    android:text="@string/get_code_txt"
                    android:textColor="@color/send_pre_color"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/input_pw_layout"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:background="@mipmap/login_btn_pre"
            android:text="@string/login_txt"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/new_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/login_btn_layout"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp">

        <TextView
            android:id="@+id/tv_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/sms_login_txt"
            android:textColor="@color/sms_login_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/register_user_txt"
            android:textColor="@color/sms_login_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/other_layout"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:gravity="center">

        <View
            android:layout_width="104dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/line_color"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/other_login_txt"
            android:textColor="@color/other_login_color"
            android:textSize="14sp" />

        <View
            android:layout_width="104dp"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/line_color"></View>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/other_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_weixin_login"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@mipmap/weixin_login" />

        <ImageView
            android:id="@+id/iv_qq_login"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginLeft="40dp"
            android:src="@mipmap/qq_login" />
    </LinearLayout>
</RelativeLayout>
